maze.lessons.maze.island.IslandMaze.scala.error
Escaper:10: error: expected class or object definition
def keepHandOnSideWall()
^Escaper:11: error: expected class or object definition
{
^